# dagster-tutorial

./: .dockerignore  .pre-commit-config.yaml  Dockerfile_dagster  Dockerfile_user_code  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: e2e.yml
.tmp_dagster_home_q1k6cwke/history/: runs.db
.tmp_dagster_home_q1k6cwke/history/runs/: index.db
.tmp_dagster_home_q1k6cwke/schedules/: schedules.db
src/dagster_tutorial/defs/: assets.py
tests/: test_ci.py
