[project]
name = "dagster_tutorial"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.0",
    "dagster-postgres>=0.28.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.14.3",
    "pytest>=8.4.2",
]
docker = [
    "dagster-docker>=0.28.0",
    "dagster-postgres>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_tutorial"
code_location_target_module = "dagster_tutorial.definitions"
registry_modules = [
    "dagster_tutorial.components.*",
]


